--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,7 +1,5 @@
-@use "settings";
-@use "tools";
-@use "generic";
-@use "elements";
-@use "objects";
-@use "components";
-@use "utilities";
+
+@import "tools";
+@import "elements";
+@import "objects";
+@import "components";
